test/syntax-errors/instruction3.sos
# instruction ne peut pas commencer par elif

elif test 1 != 0 then exit